--- a/venus/package.json
+++ b/venus/package.json
@@ -46,10 +46,10 @@
         "react-player": "^3.1.0",
         "react-redux": "^9.1.2",
         "react-router-dom": "^6.26.0",
+        "react-select": "^5.10.1",
         "sockjs-client": "^1.6.1",
         "tailwindcss": "^4.1.3",
-        "zod": "^4.0.5",
-        "react-select": "^5.10.1"
+        "zod": "^4.0.5"
     },
     "devDependencies": {
         "@testing-library/jest-dom": "^6.6.3",
@@ -58,7 +58,7 @@
         "@types/react": "^18.3.20",
         "@types/react-dom": "^18.3.6",
         "@types/sockjs-client": "^1.5.4",
-        "@vitejs/plugin-react": "^4.3.1",
+        "@vitejs/plugin-react": "^5.0.1",
         "cypress": "^13.17.0",
         "eslint": "^8.57.0",
         "eslint-plugin-react": "^7.34.3",
