--- a/vulcanus/src/main/resources/application.properties
+++ b/vulcanus/src/main/resources/application.properties
@@ -55,3 +55,6 @@ azure.storage.connection-string=${AZURE_STORAGE_CONNECTION_STRING}
 #tenor
 gif-provider.api-key=${MERKURY_GIF_PROVIDER_API_KEY}
 gif-provider.url=https://tenor.googleapis.com/v2
+#locationq
+locationq-provider.api-key=${MERKURY_LOCATIONQ_PROVIDER_API_KEY}
+locationq-provider.url=https://us1.locationiq.com/v1
