--- a/venus/package.json
+++ b/venus/package.json
@@ -49,6 +49,7 @@
         "react-select": "^5.10.1",
         "sockjs-client": "^1.6.1",
         "tailwindcss": "^4.1.3",
+        "uuid": "^11.1.0",
         "zod": "^4.0.5"
     },
     "devDependencies": {
