--- a/venus/package.json
+++ b/venus/package.json
@@ -40,6 +40,7 @@
         "react-router-dom": "^6.26.0",
         "sockjs-client": "^1.6.1",
         "tailwindcss": "^4.1.3",
+        "victory": "^37.3.6",
         "victory-chart": "^37.3.6",
         "zod": "^4.0.5"
     },
