--- a/venus/package.json
+++ b/venus/package.json
@@ -50,6 +50,8 @@
         "sockjs-client": "^1.6.1",
         "tailwindcss": "^4.1.3",
         "uuid": "^11.1.0",
+        "victory": "^37.3.6",
+        "victory-chart": "^37.3.6",
         "zod": "^4.0.5"
     },
     "devDependencies": {
