--- a/.github/workflows/react-ci.yml
+++ b/.github/workflows/react-ci.yml
@@ -10,6 +10,8 @@ on:
     branches:
       - master
       - develop
+    paths-ignore:
+      - 'documentation/**'
   merge_group:
     branches: [ master, develop ]
 
