--- a/venus/package.json
+++ b/venus/package.json
@@ -15,6 +15,7 @@
         "format:check": "prettier --check ."
     },
     "dependencies": {
+        "@ferrucc-io/emoji-picker": "^0.0.45",
         "@hookform/resolvers": "^5.1.1",
         "@reduxjs/toolkit": "^2.3.0",
         "@stomp/stompjs": "^7.1.1",
