--- a/venus/package.json
+++ b/venus/package.json
@@ -62,6 +62,8 @@
         "@types/react": "^18.3.20",
         "@types/react-dom": "^18.3.6",
         "@types/sockjs-client": "^1.5.4",
+        "@typescript-eslint/eslint-plugin": "^8.46.2",
+        "@typescript-eslint/parser": "^8.46.2",
         "@vitejs/plugin-react": "^5.0.1",
         "cypress": "^13.17.0",
         "eslint": "^8.57.0",
