--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,12 @@ dist
 .tern-port
 
 .idea
+/auxil/engineer.aux
+/auxil/engineer.bcf
+/auxil/engineer.glg
+/auxil/engineer.glo
+/auxil/engineer.gls
+/auxil/engineer.ist
+/auxil/engineer.lot
+/auxil/engineer.out
+/auxil/engineer.toc
