--- a/vulcanus/pom.xml
+++ b/vulcanus/pom.xml
@@ -196,12 +196,12 @@
         <dependency>
             <groupId>net.javacrumbs.shedlock</groupId>
             <artifactId>shedlock-spring</artifactId>
-            <version>5.16.0</version>
+            <version>7.5.0</version>
         </dependency>
         <dependency>
             <groupId>net.javacrumbs.shedlock</groupId>
-            <artifactId>shedlock-provider-mongo</artifactId>
-            <version>5.16.0</version>
+            <artifactId>shedlock-provider-jdbc-template</artifactId>
+            <version>7.5.0</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.retry</groupId>
